src/test/resources/Parser/SyntaxErrors/NotEnoughArgumentsReturn.front
class A:
    f() -> [char], A {
        return "g2esports.com/shop";
    }